@@ -5,6 +5,8 @@ vX.Y.Z (YYYY-MM-DD)
 - mysql: build-db minimal fixes to work with 8.0
 - mysql: fix payment sp out_w_city size to match table definition
 - driver3: minimal fixes to work with MySQL 8.0 stored procedures
+- test-connection-scaling: add --start --stop --step flags to control range or
+  testing
 
 v0.61.4 (2024-08-12)
 
